--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -8,6 +8,8 @@
   "author": "Nicholas Cheung, Alec Felt, Victoria Tran",
   "license": "MIT",
   "dependencies": {
+    "@cityofzion/neon-js": "^3.3.1",
+    "axios": "^0.18.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "body-parser": "^1.17.1",
     "color-convert": "^1.9.0",
