--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.1",
     "color-convert": "^1.9.0",
     "express": "^4.14.1",
+    "firebase": "^4.11.0",
     "font-awesome": "^4.7.0",
     "js-yaml": "^3.8.4",
     "next": "^5.0.0",
