--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -8,7 +8,7 @@
   "author": "Nicholas Cheung, Alec Felt, Victoria Tran",
   "license": "MIT",
   "dependencies": {
-    "@cityofzion/neon-js": "^3.3.2",
+    "@cityofzion/neon-js": "^3.4.0",
     "axios": "^0.18.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "body-parser": "^1.17.1",
@@ -19,6 +19,7 @@
     "js-yaml": "^3.8.4",
     "next": "^5.0.0",
     "node-sass": "^4.5.0",
+    "npm": "^5.8.0",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
