--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 before_script:
-- curl -L https://www.npmjs.com/install.sh | sh
+- ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+- brew install node
+- brew install npm
 
 
 build:
