--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,13 @@ install:
 build:
   stage: build
   script:
+    - cd WebApp
     - yarn build
 
 test:
   stage: test
   script:
+    - cd WebApp
     - yarn test
 
 deploy:
