add before_script to gilab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,14 @@
 image: node:8.11.1
 
 stages:
-  - install
   - build
   - test
   - deploy
 
-install:
-  stage: install
-  script:
-    - cd backend && yarn install
-    - cd ../WebApp && yarn install
-    - npm install -g now
+before_script:
+  - cd backend && yarn install
+  - cd ../WebApp && yarn install
+  - npm install -g now
 
 build:
   stage: build
