--- a/WebApp/.babelrc
+++ b/WebApp/.babelrc
@@ -1,10 +1,10 @@
 {
   "env": {
     "development": {
-      "presets": ["next/babel"]
+      "presets": [["next/babel", { "preset-env": { "modules": "commonjs" } }]] 
     },
     "production": {
-      "presets": ["next/babel"]
+      "presets": [["next/babel", { "preset-env": { "modules": "commonjs" } }]]
     },
     "test": {
       "presets": [["next/babel", { "preset-env": { "modules": "commonjs" } }]]
