checking to see if gitlab-ci secrets works

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ before_script:
 deploy:
   stage: deploy
   script:
-    - cat $NOW_TOKEN
+    - echo $NOW_TOKEN
     - npm run deploy
     - npm run alias
     - npm run now-rm
