--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,32 +1,39 @@
 image: node:8.11.1
 
 stages:
-  - build
+  # - build
   - test
-  - deploy
+  # - deploy
 
 before_script:
   - cd backend && yarn install
   - cd ../WebApp && yarn install
   - npm install -g now
 
-build_WebApp:
-  stage: build
-  script:
-    - yarn build
+# build_WebApp:
+#   stage: build
+#   script:
+#     - yarn build
 
 test_WebApp:
   stage: test
   script:
     - curl -O https://chromedriver.storage.googleapis.com/2.37/chromedriver_linux64.zip
-    - sudo apt-get install zip unzip
+    - apt-get update -y
+    - apt-get upgrade -y
+    - apt-get dist-upgrade -y
+    - apt-get -y autoremove
+    - apt-get clean
+    - apt-get install unzip
     - unzip chromedriver_linux64.zip
+    - mv chromedriver /usr/local/bin
+    - apt-get install unzip
     - rm chromedriver_linux64.zip
     - yarn test
 
-deploy_to_neomkt-test.now.sh:
-  stage: deploy
-  script:
-    - npm run deploy
-    - npm run alias
-    - npm run now-rm
+# deploy_to_neomkt-test.now.sh:
+#   stage: deploy
+#   script:
+#     - npm run deploy
+#     - npm run alias
+#     - npm run now-rm
