--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,19 @@
 image: node:8.11.1
 
 stages:
-  # - build
+  - build
   - test
-  # - deploy
+  - deploy
 
 before_script:
   - cd backend && yarn install
   - cd ../WebApp && yarn install
   - npm install -g now
 
-# build_WebApp:
-#   stage: build
-#   script:
-#     - yarn build
+build_WebApp:
+  stage: build
+  script:
+    - yarn build
 
 test_WebApp:
   stage: test
@@ -31,9 +31,9 @@ test_WebApp:
     - rm chromedriver_linux64.zip
     - yarn test
 
-# deploy_to_neomkt-test.now.sh:
-#   stage: deploy
-#   script:
-#     - npm run deploy
-#     - npm run alias
-#     - npm run now-rm
+deploy_to_neomkt-test.now.sh:
+  stage: deploy
+  script:
+    - npm run deploy
+    - npm run alias
+    - npm run now-rm
