introduced artifacts to the job that creates the node_modules

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build_WebApp:
     - cd ../WebApp && yarn install
     - yarn build
   artifacts:
-    path:
+    paths:
       - WebApp/node_modules
 
 test_WebApp:
