--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
 build_WebApp:
   stage: build
   script:
-    - cd ../WebApp && yarn install
+    - cd WebApp && yarn install
     - yarn build
   artifacts:
     paths:
