--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -35,7 +35,7 @@
     "start": "next start",
     "deploy": "now -e NODE_ENV=test --token $NOW_TOKEN",
     "alias": "now alias --token=$NOW_TOKEN",
-    "now-rm": "now rm neomkt --safe --yes --token=$NOW_TOKEN",
+    "now-rm": "now rm neomkt-test --safe --yes --token=$NOW_TOKEN",
     "test": "NODE_ENV=test jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
