--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -10,23 +10,15 @@
   "dependencies": {
     "@cityofzion/neon-js": "^3.5.0",
     "axios": "^0.18.0",
-    "babel-plugin-wrap-in-js": "^1.1.1",
-    "body-parser": "^1.17.1",
-    "color-convert": "^1.9.0",
-    "express": "^4.14.1",
+    "babel-preset-env": "^1.6.1",
     "firebase": "^4.11.0",
-    "font-awesome": "^4.7.0",
-    "js-yaml": "^3.8.4",
     "next": "^5.1.0",
-    "node-sass": "^4.5.0",
-    "npm": "^5.8.0",
+    "node-sass": "^4.8.3",
     "raw-loader": "^0.5.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
-    "sass-loader": "^6.0.6",
-    "styled-jsx": "^2.2.1",
-    "webpack": "^3.10.0",
+    "sass-loader": "^7.0.1",
     "svg-react-loader": "^0.4.5"
   },
   "scripts": {
@@ -41,23 +33,17 @@
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.3",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
-    "mockdate": "^2.0.1",
     "now": "^9.0.1",
     "pre-commit": "^1.2.2",
-    "react-test-renderer": "^16.3.1",
-    "regenerator-runtime": "^0.11.1",
-    "selenium-webdriver": "^4.0.0-alpha.1",
-    "standard": "^10.0.3",
-    "svg-react-loader": "^0.4.5"
-  }
+    "selenium-webdriver": "^4.0.0-alpha.1"
+  },
+  "pre-commit": [
+    "yarn build",
+    "yarn test",
+    "npm run dev"
+  ]
 }
