--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ deploy_to_neomkt-test.now.sh:
   stage: deploy
   script:
     - cd WebApp
+    - npm install now
     - npm run deploy
     - npm run alias
     - npm run now-rm
