--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,4 +43,5 @@ deploy_to_neomkt-test.now.sh:
     - npm run deploy
     - npm run alias
     - npm run now-rm
-  dependencies: []
+  dependencies:
+    - build_WebApp
