--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@cityofzion/neon-js": "^3.4.0",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "firebase": "^4.11.0"
   },
   "keywords": [
     "neo",
