--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -17,6 +17,7 @@
     "raw-loader": "^0.5.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-responsive-modal": "^2.1.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^7.0.1",
     "svg-react-loader": "^0.4.5"
