trying more things

--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -34,6 +34,7 @@
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "babel-jest": "^22.4.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "identity-obj-proxy": "^3.0.0",
