updated npm test

--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -29,11 +29,12 @@
     "deploy": "now -e NODE_ENV=test --token $NOW_TOKEN",
     "alias": "now alias --token=$NOW_TOKEN",
     "now-rm": "now rm neomkt-test --safe --yes --token=$NOW_TOKEN",
-    "test": "NODE_ENV=test jest --config jest.config.js",
+    "test": "NODE_ENV=test jest --config=jest.config.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-jest": "^22.4.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -41,6 +42,7 @@
     "jest": "^22.4.3",
     "now": "^9.3.3",
     "pre-commit": "^1.2.2",
+    "regenerator-runtime": "^0.11.1",
     "selenium-webdriver": "^4.0.0-alpha.1"
   },
   "pre-commit": [
