--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -38,6 +38,7 @@
     "babel-jest": "^22.4.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "file-loader": "^1.1.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
     "now": "^9.3.3",
