--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -20,7 +20,8 @@
     "react-responsive-modal": "^2.1.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^7.0.1",
-    "svg-react-loader": "^0.4.5"
+    "svg-react-loader": "^0.4.5",
+    "webpack": "^4.8.3"
   },
   "scripts": {
     "dev": "next",
