--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "babel-preset-env": "^1.6.1",
     "firebase": "^4.11.0",
+    "firebase-admin": "^5.12.1",
     "material-ui": "^0.20.1",
     "next": "^5.1.0",
     "node-sass": "^4.8.3",
